<resources xmlns:tools="https://schemas.android.com/tools"
           tools:ignore="TypographyDashes">
           
    <!-- APP Content -->
    <string name="app_name">TV Episodes</string>
    <string name="loading">Loading...</string>
    <string name="loading_failed1"> failed to access</string>
    <string name="loading_failed2">data update failed</string>
    <string name="episodes">Episodes</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="about_us">About US</string>
    
    <string name="taiwan">Taiwan</string>
    <string name="korea">Korea</string>
    <string name="japan">Japan</string>
    <string name="china">China</string>
    
    <string name="favorite_title">You have not added any drama to your favorite.</string>
    <string name="favorite_content">Click the “Collect” button at the top right side of the episodes page, and you can add your favorite dramas for future watching.</string>
    <string name="icon_illustration">Icon Illustration : </string>
    <string name="add_favorite">Add to my favorite</string>
    <string name="remove_favorite">Remove from my favorite</string>
    
    <string name="search_key_in">Key in the title of the drama</string>
    
    <string name="advice_and_feedback">Advice and Feedback</string>
    <string name="facebook">Our Fans Club</string>
    <string name="liability_disclaimer">Liability Disclaimer</string>
    <string name="entertainment_news">Entertainment News</string>
    <string name="movie_notes">Movie Notes</string>
    <string name="movie_timetable">Movie Timetable</string>
    <string name="tv_entertainment">TV Entertainment</string>
    <string name="notification_switch">Notification</string>
    <string name="continuous_switch">Continuous Playback</string>
    <string name="diary">Update Diary</string>    
    <string name="clear">Clear Buffer</string>
    <string name="chapter_listing">Chapter Listing</string>
    <string name="drama_introduction">Drama Introduction</string>
    <string name="renew_eps">Update EPS</string>
    <string name="clear_finish">Clear Finish</string>
    
    <string name="open">open</string>
    <string name="close">close</string>
    
    <string name="report">Report</string>
    <string name="need_flash_player">The following videos have to be more than Android 4.0 version and Flash Player installed native browser in order to view.</string>
    <string name="report_title">回報須知</string>
    <string name="report_description">電視綜藝的使用者你好，下列我們將會列出經常性問題的Q＆A，提供參考</string>
    <string name="report_descriptionQ1">1. 開啟影片很久，影片仍未撥放？ (Youtube)</string>
    <string name="report_descriptionA1">Q:目前電視綜藝使用的連結多半來自於Youtube，需要網路品質佳的情況下，使用情況方會良好，若持續等待一段時間仍未有影片顯示，請嘗試離開目前位置調整網路連線後再做使用。</string>
    <string name="report_descriptionQ2">2. 開啟影片很久，影片仍未撥放？ (DailyMotion)</string>
    <string name="report_descriptionA2">Q:部分電視綜藝節目來源來自於DailyMotion網路影音平台，有可能因您所在位置的網路快慢而導致讀取速度的差異，重試讀取的方式可參考影片http://bit.ly/DailyMotion撥放處理 ，建議在穩定的wifi下收看，以免網路不穩定造成收視的問題，若依舊無法顯示，參照下列步驟安裝DailyMotion撥放器使用。:</string>
    <string name="report_descriptionA21">a. 安裝DailyMotion Player : http://goo.gl/QjWXz</string>
    <string name="report_descriptionA22">b. 設定 -> 應用程式 -> 選瀏覽器app(ex chrome) -> 按下"清除預設值"</string>
    <string name="report_descriptionA23">c. 觀看時選擇內建的瀏覽器</string>
    <string name="report_descriptionQ3">3. 開啟影片很久，影片仍未撥放？ (Flash Player)</string>
    <string name="report_descriptionA3">Q:部分電視綜藝節目來源來自於LETV或是SoHu等網路影音平台，這些平台僅支援Flash Player+手機內建瀏覽器，請參照下列步驟:</string>
    <string name="report_descriptionA31">a. 安裝Flash Player : http://goo.gl/ymsaz</string>
    <string name="report_descriptionA32">b. 設定 -> 應用程式 -> 選瀏覽器app(ex chrome) -> 按下"清除預設值"</string>
    <string name="report_descriptionA33">c. 觀看時選擇內建的瀏覽器</string>
    <string name="report_descriptionQ4">3. 為什麼常常出影片失效？</string>
    <string name="report_descriptionA4">Q:由於部分影片侵犯著作權，所以電視台將會提出要求予以下架，此時請回報給JumpLife團隊，若有搜尋正常連結，將會盡速更新。</string>
    <string name="report_descriptionQ5">4. 連續撥放時出現[此段影片播放錯誤]？</string>
    <string name="report_descriptionA5">Q:線上串流有時後撥放不穩定，會出現[此段影片撥放錯誤]訊息，建議使用[外部撥放]選項，開啟外部撥放程式撥放，以取得較好的撥放品質。由於目前發現部分裝置無法使用連續撥放功能，若想恢復成舊版撥放方式，可至[關於我們]關閉[連續撥放]，即可恢復成舊版撥放方式。</string>
    <string name="report_descriptionfinal">若依舊無法解決你的問題，請使用回報按鈕，電視綜藝感謝你的使用</string>
    
    <string name="episode">Episode</string>
    <string name="no"></string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="go">Go</string>
    <string name="drama_name">Drama Name</string>
    <string name="play_time">Viewed : </string>
    
    <string name="leave_app">- Leaving App? -</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="thanks">No, Thanks</string>
    
   <string name="no_link">The Link does not provide.</string>
   <string name="use_google_search">Using Google Search</string>
   <string name="google_search">Search</string>
   
   <string name="reload_or_not">Reloading？</string>   
   <string name="load_error">Loading Error</string>
   <string name="confirm">Confirm</string>
   
   <string name="content_source">　　Source：</string>
   <string name="no_provide">(No Provided)</string>
    
    <!--<string name="admob_key">fad0a7a7089a4630</string>   admob mediation 
    <string name="vpon_key">8a8081823b4b3e98013b4ff173a702ad</string> -->
    
    <string name="admob_key">05b21d283a8140c9</string>  <!-- admob mediation -->
    <string name="kuad_key">000000G0c</string>
    <string name="hodo_key">5147dd57ddc</string>
    <string name="adwhirl_key">4074c1a2a3544c1ca28b2cca67570d25</string>
    
    
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_player_other">The link is diabled in embeded player，and it will open other enable APP ，Please to wait</string>
    
    <string name="player_description">The player can continued play video automatically，and if the link is diabled in embeded player，it will open other enable APP</string>
    <string name="player_description_play"> play/pause</string>
    <string name="player_description_next"> next Part</string>
    <string name="player_description_pre"> pre Part</string>
    
    <!-- Ticket Center -->
    <string name="ticket_center">Ticket Center</string>
    <string name="preferential">Preferential</string>
    <string name="my_ticket">My Ticket</string>    
    
    <bool name="ga_auto_activity_tracking">true</bool>
    <bool name="ga_debug">true</bool>
    <item format="integer" name="ga_dispatchPeriod" type="integer">120</item>
    <bool name="ga_dryRun">false</bool>
    
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_loading_apps">Loading list of applications\u2026</string>
    <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
   
    <string name="ga_trackingId">UA-33141342-5</string>
</resources>
