<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/background"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar_bg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/report_title"
        android:gravity="center" />

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dp"
		    android:orientation="vertical" 
		    android:background="@color/background"
		    >
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="2dp"
		        android:text="@string/report_description"
		        android:textColor="@color/white"
		        android:textSize="20dp"
		        android:textStyle="bold" />
		
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
		        android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionQ1"
		        />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionA1"
		        />
		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionQ2"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoLink="web"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA2"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA21"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA22"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA23"
                />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="18dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionQ3"
		        />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionA3"
		        />
		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA31"
                />
		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA32"
                />
		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA33"
                />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionQ4"
		        />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionA4"
		        />
		    <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionQ5"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/report_descriptionA5"
                />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
		        android:padding="2dp"
		        android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
		        android:text="@string/report_descriptionfinal"
		        />
			<Button 
				android:id="@+id/dialog_button_feedback"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:layout_margin="10dp"
				android:background="@drawable/topbar_bg"
				android:textColor="@drawable/button_feedback_tv"
				android:textSize="20dp"
				android:text="@string/report"/>
			</LinearLayout>
	</ScrollView>
    </LinearLayout>