<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <RelativeLayout android:id="@+id/rl_waterfall"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >
        <LinearLayout android:id="@+id/ll_drama_button"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentTop="true"
	        android:background="@drawable/tabackground"
	        android:orientation="horizontal"
	        android:weightSum="1.0"
	        android:visibility="gone" >
	        <Button android:id="@+id/button_drama_taiwan"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.25"
	            android:layout_marginBottom="5dp"
	            android:background="@color/transparent100" />
	        <Button android:id="@+id/button_drama_favorite"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.25"
	            android:layout_marginBottom="5dp"
                android:background="@color/transparent100"
	            android:textColor="@color/channel_button_text_press"
                android:textSize="20dp"
	            android:text="收藏" />
	        <Button android:id="@+id/button_drama_history"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.25"
	            android:layout_marginBottom="5dp"
                android:background="@color/transparent100"
	            android:textColor="@color/channel_button_text_normal"
	            android:textSize="20dp"
	            android:text="歷史" />
	        <Button android:id="@+id/button_drama_china"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.25"
	            android:layout_marginBottom="5dp"
                android:background="@color/transparent100" />
	        </LinearLayout>
	    <View android:id="@+id/line0"
            android:layout_width="fill_parent" 
            android:layout_height="0.1dp"
            android:layout_below="@+id/ll_drama_button"
            android:background="#545454"
            />
        <LinearLayout android:id="@+id/ll_drama_arrow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/line0"
            android:orientation="horizontal"
            android:weightSum="1.0" >
	        <ImageView android:id="@+id/arrow_1"
	            android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_weight="0.25"
	            />
	        <ImageView android:id="@+id/arrow_2"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow"
                android:layout_weight="0.25"
                />
	        <ImageView android:id="@+id/arrow_3"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow"
                android:layout_weight="0.25"
                android:visibility="invisible"
                />
	        <ImageView android:id="@+id/arrow_4"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_weight="0.25"
                />
	    </LinearLayout>
	    <GridView android:id="@+id/gridview_myfavorite"
            android:background="@color/background"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_below="@+id/line0"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:verticalSpacing="5dp"  
            android:horizontalSpacing="5dp"  
            android:listSelector="@color/background"
            android:numColumns="2"
            />
    </RelativeLayout>
    <LinearLayout android:id="@+id/ll_no_myfavorite"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:paddingLeft="15dp"
	    android:paddingRight="15dp" >

	    <ImageView
	        android:layout_width="50dp"
	        android:layout_height="60dp"
	        android:layout_gravity="top|center_horizontal"
	        android:background="@color/transparent100"
	        android:scaleType="fitStart"
	        android:src="@drawable/myfavorite" />

	    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/favorite_title"/>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textColor="@color/my_favorite_text_color"
            android:textSize="17dp"
            android:text="@string/favorite_content" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingTop="3dp"
            android:paddingBottom="5dp"
            android:textColor="@color/my_favorite_text_color"
            android:textSize="17dp"
            android:text="@string/icon_illustration" />
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView 
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/love_press" />
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textColor="@color/my_favorite_text_color"
                android:textSize="17dp"
                android:text="@string/add_favorite" />
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView 
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/love_normal"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textColor="@color/my_favorite_text_color"
                android:textSize="17dp"
                android:text="@string/remove_favorite" />
            </LinearLayout>
      </LinearLayout>
        
    <ImageButton android:id="@+id/refresh"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scaleType="fitCenter"
       android:visibility="gone"
       android:background="@drawable/button_background"
       android:src="@drawable/renew"/>

</LinearLayout>